--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,18 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
 
     buildFeatures {
         dataBinding true
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.3.2"
     }
 }
 
@@ -88,14 +94,12 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.44"
 
 
-    //room
     def room_version = "2.4.3"
+
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-guava:$room_version"
-    testImplementation "androidx.room:room-testing:$room_version"
-    implementation "androidx.room:room-paging:2.5.0-beta01"
+    implementation "androidx.room:room-ktx:$room_version"
 
     //timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
@@ -106,6 +110,11 @@ dependencies {
 
     //my-utils
     implementation 'com.github.AhmedSheref96:My-Utils:4.0.7'
+
+    //gson
+    implementation 'com.google.code.gson:gson:2.9.1'
+
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
 }
 
