--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,7 +115,12 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
 
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
-
+    implementation "io.coil-kt:coil-bom"
+    implementation "io.coil-kt:coil"
+    implementation "io.coil-kt:coil-compose"
+    implementation "io.coil-kt:coil-gif"
+    implementation "io.coil-kt:coil-svg"
+    implementation "io.coil-kt:coil-video"
 }
 
 kapt {
