--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,13 +59,19 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    def nav_version = "2.5.2"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
 
     //compose
     implementation 'androidx.compose.ui:ui:1.2.1'
@@ -122,6 +128,11 @@ dependencies {
     implementation "io.coil-kt:coil-gif"
     implementation "io.coil-kt:coil-svg"
     implementation "io.coil-kt:coil-video"
+
+
+    //tedimagepicker
+    implementation 'io.github.ParkSangGwon:tedimagepicker:1.2.8'
+    implementation 'id.zelory:compressor:3.0.1'
 }
 
 kapt {
